[metadata]
name = aiostomp
version = attr: aiostomp.__version__
author = Pedro Kiefer
author_email    = pedro@kiefer.com.br
summary         = Stompt Client for Asyncio applications
description_file = README.md
long_description_content_type = text/markdown
requires_python = >=3.6
project_urls =
    Source Code = https://github.com/pedrokiefer/aiostomp
license = MIT
license_files = LICENSE.txt
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    stomp, asyncio, client

[options]
include_package_data = True
packages = find:
install_requires =
    six
    async-timeout

[options.packages.find]
excludes =
    tests
    tests.*

[options.extras_require]
tests =
    mock
    coverage
    asynctest
    pytest
    pytest-cov
    flake8
    bumpversion